--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *P*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Matthias Leroy*\n",
+    "* *Pierre Fouche*\n",
+    "* *Alexandre Poussard*\n",
     "\n",
     "---\n",
     "\n",
@@ -39,13 +39,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.7403\n"
+     ]
+    }
+   ],
    "source": [
-    "# ... WRITE YOUR CODE HERE..."
+    "import requests\n",
+    "from random import randint\n",
+    "\n",
+    "URL_TEMPLATE = 'http://iccluster118.iccluster.epfl.ch:5050/v1.0/facebook?user={user_id}'\n",
+    "N = 10000\n",
+    "sumAge = 0\n",
+    "i = 0\n",
+    "user_id = 'f30ff3966f16ed62f5165a229a19b319'\n",
+    "while i < N:\n",
+    "    url = URL_TEMPLATE.format(user_id=user_id)\n",
+    "    response = requests.get(url)\n",
+    "    response = response.json()\n",
+    "    \n",
+    "    sumAge += response['age']\n",
+    "    index = randint(0,len(response['friends'])-1)\n",
+    "    user_id = response['friends'][index]\n",
+    "    i = i+1\n",
+    "print(sumAge/N)"
    ]
   },
   {
@@ -66,6 +91,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -81,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
