--- a/ix-lab2/notebooks/ix-lab2-helper.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-helper.ipynb
@@ -63,13 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import epidemics_helper"
+    "import networkx as nx\n",
+    "import epidemics_helper\n",
+    "from networkx.readwrite import json_graph\n",
+    "\n",
+    "import json\n",
+    "data = {}\n",
+    "with open(\"../data/nyc_augmented_network.json\") as json_data:\n",
+    "    data = json.load(json_data)\n",
+    "\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -90,18 +100,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43437\n"
+     ]
+    }
+   ],
    "source": [
-    "G = # ... YOUR CODE HERE ..."
+    "G = json_graph.node_link_graph(data)\n",
+    "print(nx.number_of_edges(G))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -119,12 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epidemic stopped after 13.74 days | 13.74 days elapsed | 0.1% susceptible, 0.0% infected, 99.9% recovered\n"
+     ]
+    }
+   ],
    "source": [
     "sir.launch_epidemic(source=0, max_time=100.0)"
    ]
@@ -150,11 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node:  123\n",
+      "Infection time:  0.156320376788\n",
+      "Recovery time:  0.786330432107\n"
+     ]
+    }
+   ],
    "source": [
     "node_id = 123\n",
     "print('Node: ', node_id)\n",
