--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *P*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Matthias Leroy*\n",
+    "* *Pierre Fouche*\n",
+    "* *Alexandre Poussard*\n",
     "\n",
     "---\n",
     "\n",
@@ -41,11 +41,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# ... WRITE YOUR CODE HERE..."
+    "import networkx as nx\n",
+    "import epidemics_helper\n",
+    "from networkx.readwrite import json_graph\n",
+    "\n",
+    "import json\n",
+    "data = {}\n",
+    "with open(\"../data/nyc_augmented_network.json\") as json_data:\n",
+    "    data = json.load(json_data)\n",
+    "G = json_graph.node_link_graph(data)\n",
+    "sir = epidemics_helper.SimulationSIR(G, beta=10.0, gamma=0.1)\n",
+    "sir.launch_epidemic(source=23654, max_time=100.0)\n",
+    "print(sir.status)"
    ]
   },
   {
