--- a/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
@@ -127,10 +127,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "graph = nx.read_adjlist('../data/wikipedia.graph', create_using = nx.DiGraph())\n",
+    "nbrNodes = graph.number_of_nodes()\n",
+    "H = np.zeros((nbrNodes,nbrNodes))\n",
+    "for i in range(nbrNodes):\n",
+    "    for j in range(nbrNodes):\n",
+    "        if str(j) in graph.neighbors(str(i)):\n",
+    "            H[i][j] = 1/graph.out_degree(str(i))\n",
+    "print(H[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    " print(H[0][3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,10 +168,64 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "w = np.zeros((nbrNodes,1),int)\n",
+    "ones = np.ones((1,nbrNodes),int)\n",
+    "for i in range(nbrNodes):\n",
+    "    if not graph.neighbors(str(i)):\n",
+    "        w[i] = 1\n",
+    "w = np.matmul(w,ones) * 1/nbrNodes\n",
+    "H2 = H + w\n",
+    "theta = 0.85\n",
+    "temp = np.matmul(ones.transpose(),ones) * (1-theta) / nbrNodes\n",
+    "G = theta * H2 + temp\n",
+    "\n",
+    "\n",
+    "pi = np.ones((1,nbrNodes),int) / nbrNodes\n",
+    "norm = 1\n",
+    "i=0\n",
+    "while norm > pow(10,-6):\n",
+    "    temp = pi\n",
+    "    pi = np.matmul(pi,G)\n",
+    "    norm = np.linalg.norm(pi-temp)\n",
+    "    i+=1\n",
+    "print(pi)\n",
+    "print(norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "dic = {}\n",
+    "for i in range(nbrNodes):\n",
+    "    dic[i] = pi[0][i]\n",
+    "sorted_node = sorted(dic.items(), key=lambda x: -x[1])\n",
+    "topTen = sorted_node[:10]\n",
+    "topTen = dict(topTen)\n",
+    "print(str(topTen.keys()))\n",
+    "result = dict.fromkeys(topTen.keys())\n",
+    "with open(\"../data/wikipedia_titles.tsv\") as title:\n",
+    "    for line in title:\n",
+    "        columns = line.split(\"\\t\")\n",
+    "        if columns[0] != \"#page_id\" and int(columns[0]) in list(topTen.keys()):\n",
+    "            result[int(columns[0])] = columns[1][:-1]\n",
+    "print(result.values())\n",
+    "        \n",
+    "\n",
+    "\n",
+    "x = nx.pagerank(graph)\n",
+    "print(x['0'])"
+   ]
   }
  ],
  "metadata": {
