--- a/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part4.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *P*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Matthias Leroy*\n",
+    "* *Pierre Fouche*\n",
+    "* *Alexandre Poussard*\n",
     "\n",
     "---\n",
     "\n",
@@ -127,19 +127,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "graph = nx.read_adjlist('../data/wikipedia.graph', create_using = nx.DiGraph())\n",
-    "nbrNodes = graph.number_of_nodes()\n",
-    "H = np.zeros((nbrNodes,nbrNodes))\n",
-    "for i in range(nbrNodes):\n",
-    "    for j in range(nbrNodes):\n",
-    "        if str(j) in graph.neighbors(str(i)):\n",
-    "            H[i][j] = 1/graph.out_degree(str(i))\n",
-    "print(H[0])"
+    "def powerIteration(G,pi):\n",
+    "    norm = 1\n",
+    "    while norm > pow(10,-6):\n",
+    "        temp = pi\n",
+    "        pi = np.matmul(pi,G)\n",
+    "        norm = np.linalg.norm(pi-temp)\n",
+    "    return pi\n",
+    "\n",
+    "def printTopTen(score,nbrNodes):\n",
+    "    dic = {}\n",
+    "    for i in range(nbrNodes):\n",
+    "        dic[i] = score[0][i]\n",
+    "    sorted_node = sorted(dic.items(), key=lambda x: -x[1])\n",
+    "    topTen = sorted_node[:10]\n",
+    "    topTen = dict(topTen)\n",
+    "\n",
+    "    result = dict.fromkeys(topTen.keys())\n",
+    "    with open(\"../data/wikipedia_titles.tsv\") as title:\n",
+    "        for line in title:\n",
+    "            columns = line.split(\"\\t\")\n",
+    "            if columns[0] != \"#page_id\" and int(columns[0]) in list(topTen.keys()):\n",
+    "                result[int(columns[0])] = columns[1][:-1]\n",
+    "    print(result.values())\n",
+    "    \n",
+    "def pageRank(graph):\n",
+    "    nbrNodes = graph.number_of_nodes()\n",
+    "    H = np.zeros((nbrNodes,nbrNodes))\n",
+    "    for i in range(nbrNodes):\n",
+    "        for j in range(nbrNodes):\n",
+    "            if str(j) in graph.neighbors(str(i)):\n",
+    "                H[i][j] = 1/graph.out_degree(str(i))\n",
+    "    w = np.zeros((nbrNodes,1),int)\n",
+    "    ones = np.ones((1,nbrNodes),int)\n",
+    "    for i in range(nbrNodes):\n",
+    "        if not graph.neighbors(str(i)):\n",
+    "            w[i] = 1\n",
+    "    w = np.matmul(w,ones) * 1/nbrNodes\n",
+    "    H2 = H + w\n",
+    "    theta = 0.85\n",
+    "    temp = np.matmul(ones.transpose(),ones) * (1-theta) / nbrNodes\n",
+    "    G = theta * H2 + temp\n",
+    "    pi = np.ones((1,nbrNodes),int) / nbrNodes\n",
+    "    return powerIteration(G,pi)\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -150,8 +189,18 @@
    },
    "outputs": [],
    "source": [
-    " print(H[0][3])"
+    "graph = nx.read_adjlist('../data/wikipedia.graph', create_using = nx.DiGraph())\n",
+    "printTopTen(pageRank(graph),graph.number_of_nodes())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -173,28 +222,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "w = np.zeros((nbrNodes,1),int)\n",
-    "ones = np.ones((1,nbrNodes),int)\n",
-    "for i in range(nbrNodes):\n",
-    "    if not graph.neighbors(str(i)):\n",
-    "        w[i] = 1\n",
-    "w = np.matmul(w,ones) * 1/nbrNodes\n",
-    "H2 = H + w\n",
-    "theta = 0.85\n",
-    "temp = np.matmul(ones.transpose(),ones) * (1-theta) / nbrNodes\n",
-    "G = theta * H2 + temp\n",
-    "\n",
-    "\n",
-    "pi = np.ones((1,nbrNodes),int) / nbrNodes\n",
-    "norm = 1\n",
-    "i=0\n",
-    "while norm > pow(10,-6):\n",
-    "    temp = pi\n",
-    "    pi = np.matmul(pi,G)\n",
-    "    norm = np.linalg.norm(pi-temp)\n",
-    "    i+=1\n",
-    "print(pi)\n",
-    "print(norm)"
+    "\n"
    ]
   },
   {
@@ -204,28 +232,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "import operator\n",
-    "dic = {}\n",
-    "for i in range(nbrNodes):\n",
-    "    dic[i] = pi[0][i]\n",
-    "sorted_node = sorted(dic.items(), key=lambda x: -x[1])\n",
-    "topTen = sorted_node[:10]\n",
-    "topTen = dict(topTen)\n",
-    "print(str(topTen.keys()))\n",
-    "result = dict.fromkeys(topTen.keys())\n",
-    "with open(\"../data/wikipedia_titles.tsv\") as title:\n",
-    "    for line in title:\n",
-    "        columns = line.split(\"\\t\")\n",
-    "        if columns[0] != \"#page_id\" and int(columns[0]) in list(topTen.keys()):\n",
-    "            result[int(columns[0])] = columns[1][:-1]\n",
-    "print(result.values())\n",
-    "        \n",
-    "\n",
-    "\n",
-    "x = nx.pagerank(graph)\n",
-    "print(x['0'])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
