--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -127,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "def colorNodes(time):\n",
+    "def colorNodes(time, nbOfNodes):\n",
     "    color = []\n",
     "    for i in range(nbOfNodes):\n",
     "        if sir.inf_time[i] <= time and sir.rec_time[i] > time:\n",
@@ -139,15 +139,21 @@
     "    return color\n",
     "\n",
     "coordinatesDic = {}\n",
-    "colorAt1 = colorNodes(1)\n",
-    "colorAt3 = colorNodes(3)\n",
-    "colorAt30 = colorNodes(30)\n",
+    "colorAt1 = colorNodes(1, nx.number_of_nodes(G))\n",
+    "colorAt3 = colorNodes(3, nx.number_of_nodes(G))\n",
+    "colorAt30 = colorNodes(30, nx.number_of_nodes(G))\n",
     "\n",
     "for i in json_load[\"nodes\"]:\n",
     "    coordinatesDic[i[\"id\"]] = (i[\"coordinates\"][0],i[\"coordinates\"][1])\n",
     "\n",
     "#G.add_nodes_from(coordinatesDic.keys())\n",
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt1)\n",
+    "plt.show()\n",
+    "plt.axis('off');\n",
+    "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt3)\n",
+    "plt.show()\n",
+    "plt.axis('off');\n",
+    "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt30)\n",
     "plt.show()\n",
     "plt.axis('off');"
    ]
@@ -170,17 +176,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "graph2 = json_graph.node_link_graph(json_load)\n",
-    "for i in range(1000):\n",
-    "    index = np.random.randint(0,nx.number_of_edges(graph2))\n",
-    "    graph2.remove_edge(graph2.edges()[index][0],graph2.edges()[index][1])\n",
-    "\n",
-    "startingNode = np.random.randint(0,nx.number_of_nodes(graph2))\n",
-    "sir = epidemics_helper.SimulationSIR(graph2, beta=10.0, gamma=0.1)\n",
-    "sir.launch_epidemic(source=startingNode, max_time=100.0)\n",
-    "plotStatus(graph2,sir)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
