First strategy done

--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -172,15 +172,55 @@
    },
    "outputs": [],
    "source": [
-    "graph2 = json_graph.node_link_graph(json_load)\n",
-    "edges = sample(graph2.edges(),10000)\n",
+    "%%capture\n",
+    "def randomEpidemics(nbrEdges):\n",
+    "    \n",
+    "    graph2 = json_graph.node_link_graph(json_load)\n",
+    "    edges = sample(graph2.edges(),nbrEdges)\n",
     "\n",
-    "graph2.remove_edges_from(edges)\n",
+    "    graph2.remove_edges_from(edges)\n",
     "\n",
-    "startingNode = np.random.randint(0,nx.number_of_nodes(graph2))\n",
-    "sir = epidemics_helper.SimulationSIR(graph2, beta=10.0, gamma=0.1)\n",
-    "sir.launch_epidemic(source=startingNode, max_time=100.0)\n",
-    "plotStatus(graph2,sir)"
+    "    startingNode = np.random.randint(0,nx.number_of_nodes(graph2))\n",
+    "    sir = epidemics_helper.SimulationSIR(graph2, beta=10.0, gamma=0.1)\n",
+    "    sir.launch_epidemic(source=startingNode, max_time=100.0);\n",
+    "    nbrSuc = 0\n",
+    "    nbrInf = 0\n",
+    "    nbrRec = 0\n",
+    "    for i in range(nx.number_of_nodes(graph2)):\n",
+    "        if sir.inf_time[i] <= 30 and sir.rec_time[i] > 30:\n",
+    "            nbrInf +=1\n",
+    "        elif sir.inf_time[i] > 30:\n",
+    "            nbrSuc +=1\n",
+    "        elif sir.rec_time[i] <= 30:\n",
+    "            nbrRec +=1\n",
+    "   \n",
+    "    return (nbrSuc,nbrInf,nbrRec)\n",
+    "\n",
+    "def computeAverage(nbrEdges):\n",
+    "    averageSuc = 0\n",
+    "    averageInf = 0\n",
+    "    averageRec = 0\n",
+    "    for i in range(5):\n",
+    "        r1 = randomEpidemics(nbrEdges)\n",
+    "        averageSuc += r1[0]\n",
+    "        averageInf += r1[1]\n",
+    "        averageRec += r1[2]\n",
+    "    return (averageSuc/5,averageInf/5,averageRec/5)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "average1 = computeAverage(1000)\n",
+    "average2 = computeAverage(10000)\n",
+    "print(\"With 1000 edges removed, at time 30, the average of persons suceptible is \",average1[0],\", of persons infected is \",average1[1],\", of persons dead is \",average1[2])\n",
+    "print(\"With 10000 edges removed, at time 30, the average of persons suceptible is \",average2[0],\", of persons infected is \",average2[1],\", of persons dead is \",average2[2])     "
    ]
   },
   {
