--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -49,7 +49,7 @@
     "from random import randint\n",
     "\n",
     "URL_TEMPLATE = 'http://iccluster118.iccluster.epfl.ch:5050/v1.0/facebook?user={user_id}'\n",
-    "N = 10\n",
+    "N = 1000\n",
     "sumAge = 0\n",
     "i = 0\n",
     "user_id = 'f30ff3966f16ed62f5165a229a19b319'\n",
@@ -69,17 +69,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our estimation of the average age of a facebook user is 25.5 years. We visited 1000 users to find this estimation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Exercise 2.8"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our estimation is far from the real average age by almost 20 years. Indeed our algorithm allows us to visit mutiple times the same user. To avoid that we can keep in memory all the user already visited and add a condition in the algorithm. "
+   ]
   }
  ],
  "metadata": {
