--- a/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
@@ -41,20 +41,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import networkx as nx\n",
-    "import collections\n",
-    "\n",
-    "graph1 = nx.read_edgelist('../data/network1.csv', delimiter = \",\")\n",
+    "import collections as cl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#1) We load the graph with networkx\n",
+    "graph1 = nx.read_edgelist('../data/network1.csv', delimiter = \",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#2) We compute the number of edges and nodes of network1\n",
     "nbr_edges = nx.number_of_edges(graph1)\n",
     "nbr_nodes = nx.number_of_nodes(graph1)\n",
-    "print(nbr_edges)\n",
-    "print(nbr_nodes)"
+    "print(nbr_edges, nbr_nodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) The network has 13033 nodes and 18584 edges"
    ]
   },
   {
@@ -73,13 +100,27 @@
    "outputs": [],
    "source": [
     "def degreeDistribution(graph):\n",
+    "    #Get a dictionary where the key is the node and the value its degree\n",
     "    degree = graph.degree(graph.nodes())\n",
-    "    degreeCount = collections.Counter(sorted(list(degree.values())))\n",
-    "    print(degreeCount)\n",
+    "    sortedDegreeValues = sorted(list(degree.values()))\n",
+    "    \n",
+    "    #To get the degree distribution we use this function that sum occurrences of words in a list and return a dictionary\n",
+    "    #where the key is a degree and the value the number of nodes with this degree\n",
+    "    degreeCount = cl.Counter(sortedDegreeValues)\n",
+    "    \n",
+    "    #In order to correctly visualize the node degree distribution we have to use a log scaling on both axis\n",
+    "    #We can use an histrogram (with the log attribut to True)\n",
+    "    plt.hist(sortedDegreeValues, bins=15, log=True)\n",
+    "    plt.axis([0,900,0,10**5])\n",
+    "    plt.title(\"Degree Distribution of 'network1'\", fontsize=15)\n",
+    "    plt.xlabel(\"Degree\", fontsize=10)\n",
+    "    plt.ylabel(\"Number of nodes\", fontsize=10)\n",
+    "    plt.grid()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #Or we can use a loglog plot\n",
     "    plt.loglog(list(degreeCount.values()))\n",
-    "    plt.show()         \n",
-    "\n",
-    "    "
+    "    plt.show()  "
    ]
   },
   {
@@ -97,6 +138,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1) The distribution is widly distributed that is why we have to plot using a logarithmic scale for both axis.\n",
+    "We can use a loglog plot or an histogram of pyplot. In both case we can make a log scale on the axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#We can find the mean, variance and standard deviation of the degree distribution\n",
+    "sortedDegreeValues = sorted(list(graph1.degree(graph1.nodes()).values()))\n",
+    "mean = np.mean(sortedDegreeValues)\n",
+    "var = np.var(sortedDegreeValues)\n",
+    "std = np.std(sortedDegreeValues)\n",
+    "print(mean, var, std)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) The mean, the variance and the standart deviation of the degree distibution are respectively and approximately : 2.85, 435.13 and 20.86"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Exercise 2.3: Giant component"
    ]
   },
@@ -108,9 +180,25 @@
    },
    "outputs": [],
    "source": [
-    "print(nx.number_connected_components(graph1))\n",
-    "giant = max(nx.connected_component_subgraphs(graph1), key=len)\n",
-    "print(len(giant))"
+    "#We get the number of connected comonents\n",
+    "nbConnectedComponent = nx.number_connected_components(graph1)\n",
+    "print(nbConnectedComponent)\n",
+    "\n",
+    "#In order to find if there is a giant component in the graph we can start by finding all its connected components\n",
+    "conComponent = nx.connected_component_subgraphs(graph1)\n",
+    "#Then we find the component  with the larger number of edges\n",
+    "giant = max(conComponent, key=nx.number_of_edges)\n",
+    "#We get the size of the bigger component if this number is enough we can say that is a giant component\n",
+    "size = nx.number_of_edges(giant)\n",
+    "print(size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) There are 192 connected components in network1.\n",
+    "2) There is a giant component, its size (number of edges) is 1."
    ]
   },
   {
@@ -135,7 +223,7 @@
     "        for value2 in value.values():\n",
     "            path.append(value2)\n",
     "    print(len(path))\n",
-    "    distribPath = collections.Counter(path)\n",
+    "    distribPath = cl.Counter(path)\n",
     "    print(distribPath)\n",
     "    plt.plot(list(distribPath.values()))\n",
     "    plt.show()\n",
