--- a/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
@@ -76,7 +76,7 @@
     "    degree = graph.degree(graph.nodes())\n",
     "    degreeCount = collections.Counter(sorted(list(degree.values())))\n",
     "    print(degreeCount)\n",
-    "    plt.loglog(list(degreeCount.values()))\n",
+    "    plt.hist(list(degreeCount.values()))\n",
     "    plt.show()         \n",
     "\n",
     "    "
@@ -129,11 +129,10 @@
    "outputs": [],
    "source": [
     "def shortPaths(graph):\n",
-    "    dicPath = nx.shortest_path_length(graph)\n",
+    "    dicPath = nx.all_pairs_shortest_path_length(graph)\n",
     "    path = []\n",
     "    for value in dicPath.values():\n",
-    "        for value2 in value.values():\n",
-    "            path.append(value2)\n",
+    "        path.extend(list(value.values()))\n",
     "    print(len(path))\n",
     "    distribPath = collections.Counter(path)\n",
     "    print(distribPath)\n",
@@ -153,7 +152,19 @@
    },
    "outputs": [],
    "source": [
-    "shortPaths(graph1)"
+    "average=shortPaths(graph1)\n",
+    "print(average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -187,7 +198,7 @@
     "print(nbr_nodes2)\n",
     "\n",
     "degreeDistribution(graph2)\n",
-    "shortPaths(graph2)"
+    "average2 = shortPaths(graph2)"
    ]
   },
   {
@@ -204,7 +215,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(average2)"
+   ]
   }
  ],
  "metadata": {
