--- a/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part1.ipynb
@@ -104,8 +104,7 @@
     "    degree = graph.degree(graph.nodes())\n",
     "    sortedDegreeValues = sorted(list(degree.values()))\n",
     "    \n",
-    "    #To get the degree distribution we use this function that sum occurrences of words in a list and return a dictionary\n",
-    "    #where the key is a degree and the value the number of nodes with this degree\n",
+    "    #To get the degree distribution we use this function that sum occurrences of words in a list and return a dictionary where the key is a degree and the value the number of nodes with this degree\n",
     "    degreeCount = cl.Counter(sortedDegreeValues)\n",
     "    \n",
     "    #In order to correctly visualize the node degree distribution we have to use a log scaling on both axis\n",
@@ -275,7 +274,7 @@
     "print(nbr_nodes2)\n",
     "\n",
     "degreeDistribution(graph2)\n",
-    "shortPaths(graph2)"
+    "#shortPaths(graph2)"
    ]
   },
   {
