Answer to the questions

--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -48,6 +48,7 @@
     "import requests\n",
     "from random import randint\n",
     "\n",
+    "#Parameters to start the algorithm\n",
     "URL_TEMPLATE = 'http://iccluster118.iccluster.epfl.ch:5050/v1.0/facebook?user={user_id}'\n",
     "N = 1000\n",
     "sumAge = 0\n",
@@ -59,6 +60,7 @@
     "    response = response.json()\n",
     "    \n",
     "    sumAge += response['age']\n",
+    "    #Choose a friend randomly\n",
     "    index = randint(0,len(response['friends'])-1)\n",
     "    user_id = response['friends'][index]\n",
     "    i = i+1\n",
