--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -53,11 +53,12 @@
     "import numpy as np\n",
     "from random import sample\n",
     "\n",
-    "\n",
+    "#Load the graph\n",
     "filename = '../data/nyc_augmented_network.json'\n",
     "json_load = json.load(open(filename))\n",
     "G = json_graph.node_link_graph(json_load)\n",
     "\n",
+    "#Launch the epidemic\n",
     "sir = epidemics_helper.SimulationSIR(G, beta=10.0, gamma=0.1)\n",
     "sir.launch_epidemic(source=23654, max_time=100.0)"
    ]
@@ -121,6 +122,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It takes 7 day before 60% of the population is infected and 15 days before 60% is recovered"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -128,8 +136,10 @@
    },
    "outputs": [],
    "source": [
+    "#Create a list of color to draw the graph in function of the time\n",
     "def colorNodes(time, nbOfNodes):\n",
     "    color = []\n",
+    "    #Check the state of the node and choose the color\n",
     "    for i in range(nbOfNodes):\n",
     "        if sir.inf_time[i] <= time and sir.rec_time[i] > time:\n",
     "            color.append('r')\n",
@@ -144,11 +154,11 @@
     "colorAt3 = colorNodes(3, nx.number_of_nodes(G))\n",
     "colorAt30 = colorNodes(30, nx.number_of_nodes(G))\n",
     "\n",
+    "#Create a dictionary of coordinates to draw the graph\n",
     "for i in json_load[\"nodes\"]:\n",
     "    coordinatesDic[i[\"id\"]] = (i[\"coordinates\"][0],i[\"coordinates\"][1])\n",
     "\n",
-    "#G.add_nodes_from(coordinatesDic.keys())\n",
-    "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt30)\n",
+    "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt1)\n",
     "plt.show()\n",
     "plt.axis('off');\n",
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt3)\n",
@@ -157,6 +167,15 @@
     "nx.draw_networkx(G, coordinatesDic, with_labels=False, node_size=10, node_color=colorAt30)\n",
     "plt.show()\n",
     "plt.axis('off');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After one day, everybody in the zone around the source is infected but it is a small portion of the city.\n",
+    "After three days, the epidemic start to spread in the city and people around the source start to recover.\n",
+    "After thirty days, almost the entire city has recovered."
    ]
   },
   {
@@ -178,11 +197,13 @@
    },
    "outputs": [],
    "source": [
+    "#Create and launch random epidemic\n",
     "def randomEpidemics(nbrEdges):\n",
     "    \n",
     "    graph2 = json_graph.node_link_graph(json_load)\n",
+    "    \n",
+    "    #Remove random edges\n",
     "    edges = sample(graph2.edges(),nbrEdges)\n",
-    "\n",
     "    graph2.remove_edges_from(edges)\n",
     "\n",
     "    startingNode = np.random.randint(0,nx.number_of_nodes(graph2))\n",
@@ -201,6 +222,7 @@
     "   \n",
     "    return (nbrSuc,nbrInf,nbrRec)\n",
     "\n",
+    "#Compute the average number of suceptible, infected and recovered\n",
     "def computeAverage(nbrEdges):\n",
     "    averageSuc = 0\n",
     "    averageInf = 0\n",
@@ -226,6 +248,14 @@
     "average2 = computeAverage(10000)\n",
     "print(\"With 1000 edges removed, at time 30, the average of persons suceptible is \",average1[0],\", of persons infected is \",average1[1],\", of persons dead is \",average1[2])\n",
     "print(\"With 10000 edges removed, at time 30, the average of persons suceptible is \",average2[0],\", of persons infected is \",average2[1],\", of persons dead is \",average2[2])     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This strategy is not effective, we can see that after 30 days only 109.2 persons, in average, are still healthy, 2956.8 are infected and 23415 dead. So almost everyone is dead.\n",
+    "<br/>If we increase the budget, the stategy is a little more effective. 12915 persons are healthy, 2153.2 are infected and there are still 11412.8 persons dead"
    ]
   },
   {
